<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="30dp">

    <Button
        android:id="@+id/buttonFetch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_data" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result_tip" />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/timer" />

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="Введи текст"
        android:background="@color/cardview_dark_background"
        android:inputType="text"
        android:paddingVertical="16dp"
        android:text="@string/edit_text_log"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/apiRequest1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_btn_text1" />

    <Button
        android:id="@+id/apiRequest2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_btn_text2" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:name="ru.effectivem.rxjavapractice.ui.MyFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp" />
</LinearLayout>